fix: z-index err - position 설정으로 해결할 수 있는 부분은 설정 제외 - 기본 설정되어 있는 경우 생략 - drop-shadow 오류: 전체 box-shadow로 대체 - 지정이 필요한 경우, index.css에서 관리

--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,23 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+/* z-index */
+.tooltip .tooltip-tip {
+  @apply z-50;
+}
+.modal {
+  @apply z-40;
+}
+.popover-panel {
+  @apply z-20;
+}
+.WalletPopover {
+  .backdrop {
+    @apply z-10;
+  }
+}
+.select ul[role="listbox"],
+.dropdown [role="menu"] {
+  @apply z-20;
+}
